# techbiz-workshop

./: .env.example  .gitignore  CLAUDE.md  README.md  langgraph.json  main.py  pyproject.toml
config/: settings.py
config/prompts/: classification.txt  generation.txt
data/raw/: www_nbg_gr_en_about_us.md  www_nbg_gr_en_business.md  www_nbg_gr_en_contact.md  www_nbg_gr_en_go4more_how_go4more_works.md  www_nbg_gr_en_individuals.md  www_nbg_gr_en_individuals_daily_transactions_banking_accounts.md  www_nbg_gr_en_individuals_daily_transactions_banking_accounts_benefits_account.md  www_nbg_gr_en_individuals_daily_transactions_banking_accounts_everyday_accounts_current_account.md  www_nbg_gr_en_individuals_daily_transactions_banking_accounts_everyday_accounts_savings_account.md  www_nbg_gr_en_individuals_daily_transactions_banking_accounts_salary_pension_accounts.md  www_nbg_gr_en_individuals_daily_transactions_cards_credit_cards.md  www_nbg_gr_en_individuals_daily_transactions_cards_credit_cards_gold.md  www_nbg_gr_en_individuals_daily_transactions_cards_credit_cards_silver.md  www_nbg_gr_en_individuals_daily_transactions_cards_debit_cards.md  www_nbg_gr_en_individuals_daily_transactions_cards_installment_selection_program.md  www_nbg_gr_en_individuals_daily_transactions_cards_prepaid_cards.md  www_nbg_gr_en_individuals_loans_energy_efficiency_loans.md  (+7 more)
docs/: demo-todos.md  plan-langgraph-agent.md  summary.md
scripts/: 01_crawl_nbg.py  02_build_vector_store.py  03_test_retrieval.py
tests/: test_chunker.py  test_graph.py  test_state.py  test_vector_store.py
(+21 files in other folders)
