[project]
name = "nbg-banking-agent"
version = "0.1.0"
description = "AI-powered banking assistant for National Bank of Greece (NBG) using LangGraph"
requires-python = ">=3.10"
dependencies = [
    "langgraph>=0.3.0,<0.4.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-chroma>=0.2.0",
    "langsmith>=0.2.0",
    "openai>=1.50.0",
    "chromadb>=0.5.0",
    "crawl4ai>=0.4.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "tiktoken>=0.7.0",
    "langchain-text-splitters>=0.3.0",
    "rich>=13.7.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
nbg-chat = "main:run"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]
